# Real-Time-Process-Monitoring-Dashboard

./: CMakeLists.txt  README.md  app  dashboard  imgui.ini  imgui_impl_opengl3.cpp  main.cpp  process_list.h  system_metrics.h
glad/: glad.c  glad.h
